[package]
name = "pathy"
version = "1.0.0"
authors = ["fenix <fenix@fearandesire.com>"]
edition = "2021"
description = "A CLI tool to display the file tree of a directory"
categories = ["command-line-utilities", "filesystem", "development-tools"]
keywords = ["cli", "visualization", "path",  "pathy", "tree"]
license = "MIT"
repository = "https://github.com/fearandesire/pathy"
readme = "README.md"

[badges]
maintenance = { status = "as-is" }

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3.2"

[[bin]]
name = "pathy"
path = "src/main.rs"
